# tabwrap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  compile_table.py  gunicorn.conf.py  pyproject.toml  todos.md
.github/workflows/: ci.yml  release.yml
docs/: development-roadmap.md
examples/: usage.py
frontend/: README.md
scripts/: README.md  deploy.sh  smoke_test.py
tabwrap/: __init__.py  api.py  app.py  cli.py  core.py  exceptions.py  result.py
tabwrap/config/: __init__.py
tabwrap/io/: __init__.py
tabwrap/latex/: __init__.py  error_handling.py  package_detection.py  templates.py  utils.py  validation.py
tabwrap/output/: __init__.py  bundle.py  image.py
tabwrap/utils/: error_handling.py  file_handling.py  latex.py  latex_templates.py  logging.py  validation.py
tests/: conftest.py  test_api.py  test_cli.py  test_cli_options.py  test_compile_result.py  test_compiler.py  test_enhanced_error_handling.py  test_error_handling.py  test_exceptions.py  test_integration.py  test_longtable_integration.py  test_longtable_threeparttable.py  test_package_detection.py  test_parallel.py  test_preamble_injection.py  test_recursive.py  test_standalone_template.py  test_table_environment.py  test_validation.py
tests/data/: table_recip.tex  test_longtable.tex  test_longtable_simple.tex  test_siunitx_s_column.tex  test_siunitx_simple.tex  test_siunitx_sisetup.tex  test_table.tex  test_table_simple.tex  test_table_threeparttable.tex  test_threeparttable.tex  test_threeparttable_longtable.tex
tests/load/: locustfile.py
tex_compiler/: api.py  app.py  cli.py  compile_table.py  core.py
tex_compiler/docs/: openapi.yaml
tex_compiler/utils/: image_processing.py  validation.py
