[tool.poetry]
name = "tabwrap"
version = "1.0.0"
description = "Wrap LaTeX table fragments into complete documents for research workflows"
authors = ["Jan Fasnacht <jan.fasnacht@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/janfasnacht/tabwrap"
repository = "https://github.com/janfasnacht/tabwrap"
documentation = "https://github.com/janfasnacht/tabwrap#readme"
keywords = ["latex", "tables", "research", "academic", "statistics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]
packages = [
    { include = "tabwrap" }
]

[tool.poetry.scripts]
tabwrap = "tabwrap.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pymupdf = "^1.24.11"
numpy = "^2.1.2"
pillow = "^10.4.0"
# Optional API dependencies
flask = {version = "^3.1.0", optional = true}
flask-cors = {version = "^5.0.0", optional = true}
flask-restx = {version = "^1.3.0", optional = true}

[tool.poetry.extras]
api = ["flask", "flask-cors", "flask-restx"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flask = "^3.1.0"
flask-cors = "^5.0.0"
flask-restx = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
