[project]
name = "tabwrap"
version = "1.5.0"
description = "Wrap LaTeX table fragments into complete documents for research workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jan Fasnacht", email = "jan.fasnacht@gmail.com"}
]
keywords = ["latex", "tables", "research", "academic", "statistics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
]
dependencies = [
    "click>=8.1.7",
    "pymupdf>=1.24.11",
    "numpy>=2.1.2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.6.1",
    "gunicorn>=23.0.0",
]

[project.scripts]
tabwrap = "tabwrap.cli:main"

[project.urls]
Homepage = "https://github.com/janfasnacht/tabwrap"
Repository = "https://github.com/janfasnacht/tabwrap"
Documentation = "https://github.com/janfasnacht/tabwrap#readme"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.27.2",
    "ruff>=0.13.2",
    "pre-commit>=4.3.0",
    "requests>=2.32.0",
    "locust>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tabwrap"]

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.ruff.lint]
# Equivalent to flake8's E9,F63,F7,F82 plus some modern Python best practices
select = [
    "E9",   # syntax errors
    "F63",  # invalid escape sequence
    "F7",   # syntax error in forward annotation
    "F82",  # undefined name in __all__
    "F",    # Pyflakes errors
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
